--- a/penonton/templates/awal.html
+++ b/penonton/templates/awal.html
@@ -1,16 +1,16 @@
-{% load static %}
+{% extends "base.html" %}
 
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     {% block meta %} {% endblock meta %}
     <title>List Pemesanan</title>
   </head>
   <body>
-    <h1>List Pemesanan</h1>
+    <h1 class="text-xl font-bold underline">List Pemesanan</h1>
     <table>
       <thead>
         <tr>
@@ -34,6 +34,6 @@
       </tbody>
     </table>
     <button>PESAN</button>
-    {% block content %} {% endblock content %}
   </body>
 </html>
+{% endblock content %}
