added page of beliTiket

--- a/penonton/templates/listPertandingan.html
+++ b/penonton/templates/listPertandingan.html
@@ -35,8 +35,8 @@
             <td class="px-6 py-4 flex justify-center">
               <a
                 href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
+                class="font-medium text-blue-600 dark:text-blue-500 underline"
+                >Pilih</a
               >
             </td>
           </tr>
@@ -56,8 +56,8 @@
             <td class="px-6 py-4 flex justify-center">
               <a
                 href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
+                class="font-medium text-blue-600 dark:text-blue-500 underline"
+                >Pilih</a
               >
             </td>
           </tr>
@@ -77,8 +77,8 @@
             <td class="px-6 py-4 flex justify-center">
               <a
                 href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
+                class="font-medium text-blue-600 dark:text-blue-500 underline"
+                >Pilih</a
               >
             </td>
           </tr>
@@ -98,8 +98,8 @@
             <td class="px-6 py-4 flex justify-center">
               <a
                 href="#"
-                class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                >Edit</a
+                class="font-medium text-blue-600 dark:text-blue-500 underline"
+                >Pilih</a
               >
             </td>
           </tr>
