added page of listSemuaPertandingan for penonton and manager

--- a/penonton/templates/pilihStadium.html
+++ b/penonton/templates/pilihStadium.html
@@ -11,10 +11,10 @@
       name="stadium"
     >
       <option selected>Stadium pilihan</option>
-      <option value="US">Stadium A</option>
-      <option value="CA">Stadium B</option>
-      <option value="FR">Stadium C</option>
-      <option value="DE">Stadium D</option>
+      <option>Stadium GBK</option>
+      <option>Stadium B</option>
+      <option>Stadium C</option>
+      <option>Stadium D</option>
     </select>
     <select
       id="countries"
@@ -22,10 +22,10 @@
       name="tanggal"
     >
       <option selected>Tanggal</option>
-      <option value="US">21 Januari 2021</option>
-      <option value="CA">23 Januari 2021</option>
-      <option value="DE">26 Januari 2021</option>
-      <option value="FR">30 Januari 2021</option>
+      <option>21 Januari 2021</option>
+      <option>23 Januari 2021</option>
+      <option>26 Januari 2021</option>
+      <option>30 Januari 2021</option>
     </select>
   </div>
   <div class="flex justify-center">
