refactor some code

--- a/panitia/templates/peristiwaTimBertanding.html
+++ b/panitia/templates/peristiwaTimBertanding.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 <head>
-  <title>List Waktu Stadium A</title>
+  <title>Peristiwa Tim</title>
 </head>
 <body>
   <h1 class="text-3xl font-bold flex justify-center mt-10">
