--- a/panitia/templates/mulaiPertandingan.html
+++ b/panitia/templates/mulaiPertandingan.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %} {% block content %}
 <head>
-  <title>List Waktu Stadium A</title>
+  <title>Mulai Pertandingan</title>
 </head>
 <body>
   <h1 class="text-3xl font-bold flex justify-center mt-10">
-    List Pertandingan
+    Mulai Pertandingan
   </h1>
   <div class="mx-auto mt-10 w-2/5">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
