added navbar for every my pages

--- a/manager/templates/listSemuaPertandingan.html
+++ b/manager/templates/listSemuaPertandingan.html
@@ -3,6 +3,7 @@
   <title>List Waktu Stadium A</title>
 </head>
 <body>
+  {% include "navbar_manager.html"%}
   <h1 class="text-3xl font-bold flex justify-center mt-10">
     List Pertandingan
   </h1>
