--- a/panitia/templates/mulaiPertandingan.html
+++ b/panitia/templates/mulaiPertandingan.html
@@ -3,6 +3,7 @@
   <title>Mulai Pertandingan</title>
 </head>
 <body>
+  {% include 'navbar_panitia.html' %}
   <h1 class="text-3xl font-bold flex justify-center mt-10">
     Mulai Pertandingan
   </h1>
