--- a/penonton/templates/pilihStadium.html
+++ b/penonton/templates/pilihStadium.html
@@ -3,6 +3,7 @@
   <title>Pilih Stadium</title>
 </head>
 <body>
+  {% include 'navbar_penonton.html' %}
   <h1 class="text-3xl font-bold flex justify-center mt-10">Pilih Stadium</h1>
   <div class="w-3/5 mx-auto">
     <div class="flex justify-evenly mt-10">
