--- a/panitia/templates/peristiwaTimBertanding.html
+++ b/panitia/templates/peristiwaTimBertanding.html
@@ -3,9 +3,8 @@
   <title>Peristiwa Tim</title>
 </head>
 <body>
-  <h1 class="text-3xl font-bold flex justify-center mt-10">
-    Peristiwa Tim A
-  </h1>
+  {% include 'navbar_panitia.html' %}
+  <h1 class="text-3xl font-bold flex justify-center mt-10">Peristiwa Tim A</h1>
   <div class="mx-auto mt-10 w-2/5">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
       <table class="w-full text-sm text-gray-500 dark:text-gray-400">
@@ -13,7 +12,7 @@
           class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
         >
           <tr>
-            <th scope="col" class="px-6 py-3 bg-gray-200">Pilih Pemain</th>
+            <th scope="col" class="px-6 py-3 bg-gray-200">Nama Pemain</th>
             <th scope="col" class="px-6 py-3 bg-gray-200">Peristiwa</th>
           </tr>
         </thead>
