--- a/penonton/templates/listWaktuStadium.html
+++ b/penonton/templates/listWaktuStadium.html
@@ -3,14 +3,15 @@
   <title>List Waktu Stadium A</title>
 </head>
 <body>
+  {% include 'navbar_penonton.html' %}
   <h1 class="text-3xl font-bold flex justify-center mt-10">
     List Waktu Stadium A
   </h1>
-  <div class=" w-3/5 mx-auto mt-8 ">
-    <div class="relative overflow-x-auto shadow-xl  sm:rounded-lg ">
-      <table class="w-full text-sm text-gray-500 dark:text-gray-400 ">
+  <div class="w-3/5 mx-auto mt-8">
+    <div class="relative overflow-x-auto shadow-xl sm:rounded-lg">
+      <table class="w-full text-sm text-gray-500 dark:text-gray-400">
         <thead
-          class="text-xl text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400 "
+          class="text-xl text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
         >
           <tr>
             <th scope="col" class="px-6 py-3 m-auto bg-gray-200">List Waktu</th>
@@ -18,7 +19,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">  
+          <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">
             <th
               scope="row"
               class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
