--- a/penonton/templates/semuaPertandingan.html
+++ b/penonton/templates/semuaPertandingan.html
@@ -3,8 +3,9 @@
   <title>List Waktu Stadium A</title>
 </head>
 <body>
+    {% include 'navbar_penonton.html' %}
   <h1 class="text-3xl font-bold flex justify-center mt-10">
-    List Pertandingan hai ferry
+    List Pertandingan
   </h1>
   <div class="mx-auto mt-10 w-3/5">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
