--- a/manager/templates/stadium_booking.html
+++ b/manager/templates/stadium_booking.html
@@ -1,30 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% block meta %} {% endblock meta %}
-    <title>PEMINJAMAN STADIUM</title>
-  </head>
-  <body>
-    <h1>PEMINJAMAN STADIUM</h1>
-    <form action="#" method="POST">
-      {% csrf_token %}
-      <div>
-        <label for="stadium">Stadium:</label>
-        <select name="stadium" id="stadium">
-          <option value="Stadium 1">Stadium 1</option>
-          <option value="Stadium 2">Stadium 2</option>
-          <option value="Stadium 3">Stadium 3</option>
-        </select>
-      </div>
-      <div>
-        <label for="date">Date:</label>
-        <input type="date" id="date" name="date" required />
-      </div>
-      <button type="submit">SUBMIT</button>
-    </form>
-    {% block content %} {% endblock content %}
-  </body>
-</html>
+{% extends "base.html" %} {% block content %}
+<head>
+  <title>PEMINJAMAN STADIUM</title>
+</head>
+<body class="bg-gray-100">
+  {% include 'navbar_manager.html' %}
+  <h1 class="text-center text-3xl font-bold my-8">PEMINJAMAN STADIUM</h1>
+  <form
+    action="#"
+    method="POST"
+    class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md"
+  >
+    {% csrf_token %}
+    <div class="mb-4">
+      <label for="stadium" class="block font-medium text-gray-700"
+        >Stadium:</label
+      >
+      <select
+        name="stadium"
+        id="stadium"
+        class="form-select mt-1 block w-full rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0"
+      >
+        <option value="Stadium 1">Stadium 1</option>
+        <option value="Stadium 2">Stadium 2</option>
+        <option value="Stadium 3">Stadium 3</option>
+      </select>
+    </div>
+    <div class="mb-4">
+      <label for="date" class="block font-medium text-gray-700">Date:</label>
+      <input
+        type="date"
+        id="date"
+        name="date"
+        required
+        class="form-input mt-1 block w-full rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0"
+      />
+    </div>
+    <div class="text-center">
+      <button
+        type="submit"
+        class="px-4 py-2 font-bold text-white bg-blue-500 rounded-md hover:bg-blue-700"
+      >
+        SUBMIT
+      </button>
+    </div>
+  </form>
+</body>
+{% endblock content %}
