--- a/manager/templates/booking_list.html
+++ b/manager/templates/booking_list.html
@@ -1,39 +1,36 @@
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% block meta %} {% endblock meta %}
-    <title>List Pemesanan</title>
-  </head>
-  <body>
-    <h1>List Pemesanan</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Stadium</th>
-          <th>Waktu</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Stadium 1</td>
-          <td>08:00 - 10:00</td>
-        </tr>
-        <tr>
-          <td>Stadium 2</td>
-          <td>10:00 - 12:00</td>
-        </tr>
-        <tr>
-          <td>Stadium 3</td>
-          <td>12:00 - 14:00</td>
-        </tr>
-      </tbody>
-    </table>
-    <button>PESAN</button>
-    {% block content %} {% endblock content %}
-  </body>
-</html>
+{% extends "base.html" %} {% block content %}
+<head>
+  <title class="text-xl font-bold">List Pemesanan</title>
+</head>
+<body class="bg-gray-100">
+  {% include 'navbar_manager.html' %}
+  <h1 class="text-3xl font-bold mt-8">List Pemesanan</h1>
+  <table class="table-auto w-full mt-8">
+    <thead>
+      <tr class="bg-gray-200">
+        <th class="px-4 py-2">Stadium</th>
+        <th class="px-4 py-2">Waktu</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="border-b border-gray-200">
+        <td class="px-4 py-2">Stadium 1</td>
+        <td class="px-4 py-2">08:00 - 10:00</td>
+      </tr>
+      <tr class="border-b border-gray-200">
+        <td class="px-4 py-2">Stadium 2</td>
+        <td class="px-4 py-2">10:00 - 12:00</td>
+      </tr>
+      <tr class="border-b border-gray-200">
+        <td class="px-4 py-2">Stadium 3</td>
+        <td class="px-4 py-2">12:00 - 14:00</td>
+      </tr>
+    </tbody>
+  </table>
+  <button
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-8 rounded"
+  >
+    PESAN
+  </button>
+</body>
+{% endblock content %}
