--- a/panitia/templates/nota_rapat.html
+++ b/panitia/templates/nota_rapat.html
@@ -1,20 +1,30 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% block meta %} {% endblock meta %}
-  </head>
-
-  <body>
-    <h1>RAPAT PERTANDINGAN {{team_a}} vs {{team_b}}</h1>
-    <form method="post">
-      {% csrf_token %}
-      <label for="isi_rapat">Isi Rapat:</label><br />
-      <textarea id="isi_rapat" name="isi_rapat"></textarea><br /><br />
-      <input type="submit" value="Submit" />
-    </form>
-  </body>
-</html>
+{% extends 'base.html' %} {% block content %}
+<div class="container mx-auto">
+  {% include 'navbar_panitia.html' %}
+  <h1 class="text-2xl font-bold my-4">
+    RAPAT PERTANDINGAN {{ team_a }} vs {{ team_b }}
+  </h1>
+  <form
+    class="max-w-md mx-auto my-8 p-8 bg-white rounded-lg shadow-lg"
+    method="post"
+  >
+    {% csrf_token %}
+    <div class="form-group">
+      <label class="block text-gray-700 font-bold mb-2" for="isi_rapat"
+        >Isi Rapat:</label
+      >
+      <textarea
+        class="resize-none shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="isi_rapat"
+        name="isi_rapat"
+      ></textarea>
+    </div>
+    <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-10"
+      type="submit"
+    >
+      Submit
+    </button>
+  </form>
+</div>
+{% endblock content %}
