--- a/panitia/templates/manage_pertandingan.html
+++ b/panitia/templates/manage_pertandingan.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %} {% load static %} {% block meta %} {% endblock meta %}
 {% block content %}
+{% include 'navbar_panitia.html' %}
 <head>
-  <link
+  <!-- <link
     href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
     rel="stylesheet"
-  />
+  /> -->
 </head>
 <body class="bg-gray-200">
   {% if not isLengkap %}
