--- a/panitia/templates/dashboard_panitia.html
+++ b/panitia/templates/dashboard_panitia.html
@@ -146,7 +146,7 @@
                                                     <ul>
                                                       <li>
                                                           <p class ="text-gray-500 text-sm">
-                                                              Waktu: {{rapat.hari}} {{rapat.jam}}
+                                                              Waktu: {{rapat.waktu}}
                                                           </p>
                                                       </li>  
                                                       <li>
@@ -161,7 +161,7 @@
                                                       </li>   
                                                       <li>
                                                         <p class ="text-gray-500 text-sm">
-                                                            Isi rapat: Belum ada
+                                                            Isi rapat: {{rapat.isi}}
                                                         </p>
                                                     </li>   
                                                     </ul>  
